crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__if_then_else.snap
---
source: crates/jsonschema-codegen/src/tests.rs
expression: schema_to_code(schema)
---
struct Validator;
#[doc(hidden)]
#[allow(non_snake_case, dead_code, unused_variables, clippy::all)]
mod __validator_impl {
    use super::*;
    pub(super) fn is_valid(instance: &serde_json::Value) -> bool {
        (if (instance.is_string()) {
            (match instance {
                serde_json::Value::String(s) => {
                    let len = s.chars().count();
                    (len >= 1u64 as usize)
                }
                _ => true,
            })
        } else {
            true
        })
    }
}
impl Validator {
    pub fn is_valid(instance: &serde_json::Value) -> bool {
        __validator_impl::is_valid(instance)
    }
}
