crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__items_schema.snap
---
source: crates/jsonschema-codegen/src/tests.rs
description: "{\"items\":{\"type\":\"string\"},\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => {
                arr.iter().all(|instance| instance.is_string())
            }
            _ => false,
        }
