crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__maximum.snap
---
source: crates/jsonschema-codegen/src/tests.rs
description: "{\"maximum\":100,\"type\":\"number\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Number(n) => {
                jsonschema::__private::numeric::le(n, 100u64 as u64)
            }
            _ => false,
        }
