crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__min_length.snap
---
source: crates/jsonschema-codegen/src/tests.rs
description: "{\"minLength\":3,\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::String(s) => s.chars().count() >= 3u64 as usize,
            _ => false,
        }
