crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__min_max_equal.snap
---
source: crates/jsonschema-codegen/src/tests.rs
description: "{\"maximum\":5,\"minimum\":5,\"type\":\"number\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Number(n) => {
                (jsonschema::__private::numeric::ge(n, 5u64 as u64))
                    && (jsonschema::__private::numeric::le(n, 5u64 as u64))
            }
            _ => false,
        }
