crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__min_max_items_equal.snap
---
source: crates/jsonschema-codegen/src/tests.rs
description: "{\"maxItems\":3,\"minItems\":3,\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => {
                (arr.len() >= 3u64 as usize) && (arr.len() <= 3u64 as usize)
            }
            _ => false,
        }
