crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__min_max_length_equal.snap
---
source: crates/jsonschema-codegen/src/tests.rs
description: "{\"maxLength\":5,\"minLength\":5,\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::String(s) => {
                let len = s.chars().count();
                len == 5u64 as usize
            }
            _ => false,
        }
