crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__min_max_properties_equal.snap
---
source: crates/jsonschema-codegen/src/tests.rs
description: "{\"maxProperties\":2,\"minProperties\":2}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Object(obj) => {
                (obj.len() >= 2u64 as usize) && (obj.len() <= 2u64 as usize)
            }
            _ => true,
        }
