crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__minimum.snap
---
source: crates/jsonschema-codegen/src/tests.rs
description: "{\"minimum\":0,\"type\":\"number\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Number(n) => {
                jsonschema::__private::numeric::ge(n, 0u64 as u64)
            }
            _ => false,
        }
